--- a/project-5/style.css
+++ b/project-5/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgba(126, 128, 114, 0.523);
+    background-color: #f30000ed;
 }
 * {
     margin: 0;
@@ -22,5 +22,17 @@ body{
     object-fit: cover;
     border-radius: 10px;
     display: block;
+}
+.item button {
+    
+    bottom: 10px;
+    right: 10px;
+    padding: 6px 14px;
+    border: none;
+    border-radius: 6px;
+    position: absolute;
+    position: relative;
+
+
 }
 
