--- a/project-5/style.css
+++ b/project-5/style.css
@@ -6,14 +6,11 @@ body{
     padding: 0;
     box-sizing: border-box;
 }
-
-
 .gallery {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
     padding: 20px;
-   
 }
 .gallery img {
     width: 102%;
@@ -24,15 +21,24 @@ body{
     display: block;
 }
 .item button {
-    
-    bottom: 10px;
-    right: 10px;
     padding: 6px 14px;
     border: none;
     border-radius: 6px;
-    position: absolute;
     position: relative;
+   padding-left: 130px;
+   text-align: center;
+   align-items: center;
+   padding-bottom: 50px;
+   padding-top: 30px;
 
-
+   
 }
-
+.testButton1{
+    font-size: 100%;
+    height: 10%;
+    width: 25%;
+}
+.testButton1 img{
+    height: 80%;
+    vertical-align: middle;
+}
